Add missing --add-opens directives